# orion-protocol

./: .gitignore  LICENSE  ORION_PROTOCOL.md  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: ORION_PROTOCOL.md  ORION_methodology_draft.md
src/historia_naturalis/: __init__.py  __main__.py  mcp_server.py  models.py  protocol.py  service.py  storage.py
tests/: smoke_test.py
