[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "historia-naturalis"
version = "0.1.0"
description = "Empirical debugging ledger and ORION Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
historia-naturalis = "historia_naturalis.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
